# pricing-comparison-tool

./: .gitignore  2023 report- html  ESrranker  GENT  README.md  Unstructred-3.ipynb  Unstructred.ipynb  adobe  asddsddd  asdsf  chat  esquire  exam  gdfgd  gh  grit  project stru  prompt  prompt12  pyproject.toml  pythontest  query  repor  saste  tested  testex  yyy
pricing-comparison-agents/: app.py  run.py
pricing-comparison-agents/config/: settings.py
pricing-comparison-agents/graph/: __init__.py  graph_builder.py  graph_state.py  nodes.py  prompts.py
pricing-comparison-agents/graph/retailers/: amazon.py  bestbuy.py  walmart.py
pricing-comparison-agents/utils/: helper.py
